--- a/program/fasilitas.html
+++ b/program/fasilitas.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <p id="greetings"></p>
 
     <div class="batasgalery">
         <div class="menu">
@@ -77,6 +78,7 @@
             </div>
         </div>
     </div>
+    <script src="js/menyapa.js"></script>
 
 </body>
 </html>
