--- a/program/beranda.html
+++ b/program/beranda.html
@@ -12,6 +12,7 @@
 <link rel="icon" href="img/66.png">
 </head>
 <body>
+    <p id="greetings"></p>
 <div class="top">
     <div class="batasgalery">
 <div class="menu">
@@ -21,7 +22,7 @@
 <li><a href="#.html">BERANDA</a></li>
 <li><a href="Visimisi.html">VISI & MISI</a></li>
 <li><a href="Galery.html">GALLERY</a></li>
-<li><a href="#.html">FASILITAS</a></li>
+<li><a href="fasilitas.html">FASILITAS</a></li>
 </ul>
 </div>
     </div>
@@ -191,6 +192,7 @@
     </table>
     <div class="footer"><center> © Copyright 2023  |  Mts Al- Ikhlas by Noval Dinda Firdaus,Natasha&Vara novita sari </center></div> 
 </table>
+<script src="js/menyapa.js"></script>
 </body>
 
 </html>
