Melengkapi yang belum sekesai

--- a/program/Galery.html
+++ b/program/Galery.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="img/66.png">
 </head>
 <body>
+    <p id="greetings"></p>
     
 
         <div class="batasgalery">
@@ -153,7 +154,7 @@
 
     <div class="footer"><center> © Copyright 2023  |  Mts Al- Ikhlas by Noval Dinda Firdaus,Natasha&Vara novita sari </center></div> 
 </table>
-
+<script src="js/menyapa.js"></script>
     
 </body>
 </html>
