--- a/program/Visimisi.html
+++ b/program/Visimisi.html
@@ -27,7 +27,7 @@
 
     <div class="berita">
         <h1>Visi & Misi</h1>
-        <p style="width: 50%;text-align: center;margin-left: auto;margin-right: auto;">Sekolah kami menyediakan berbagai fasilitas pendidikan yang lengkap dan modern untuk mendukung proses belajar mengajar bagi siswa dan siswi kami yang tercinta.</p>
+        <p style="width: 50%;text-align: l;margin-left: auto;margin-right: auto;">Sekolah kami memiliki visi & misi</p>
         <h2>Visi</h2>
         <p>Mendidik Siswa Cerdas, Terampil Dan Berakhlaqul Karimah Berlandaskan  Iman  Dan Taqwa</p>
         <h2>Misi</h2>
