--- a/program/beranda.html
+++ b/program/beranda.html
@@ -23,6 +23,7 @@
 <li><a href="Visimisi.html">VISI & MISI</a></li>
 <li><a href="Galery.html">GALLERY</a></li>
 <li><a href="fasilitas.html">FASILITAS</a></li>
+<li><a href="#">MENU ADMIN</a></li>
 </ul>
 </div>
     </div>
