natasha: merubah title pada file beranda

--- a/program/beranda.html
+++ b/program/beranda.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>mtsalikhlas tanjung bintang</title>
+<title>Mts Al-ikhlas Tanjung Bintang</title>
 <link rel="stylesheet" href="style.css"/>
 <link rel="icon" href="img/66.png">
 </head>
