natasha: merubah file gallery

--- a/program/Galery.html
+++ b/program/Galery.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="berita">
-    <h1>Galery Siswa MTs Al Ikhlas.</h1>
+    <h1>Galery Siswa MTs Al Ikhlas </h1>
     <p>Beragam Kegiatan yang dilakukan Siswa Siswi Mts Al Ikhlas Tanjung Bintang </p> 
     <div class="grid4">
     <div class="grid3">
