natasha: mengupdate file login pada folder program

--- a/program/Login.html
+++ b/program/Login.html
@@ -84,4 +84,29 @@ background-color: #45a049;
 </style>
 </head>
 
+<body>
+    <div class="login-container">
+      <h2>Login Admin</h2>
+  
+      <!-- Area user -->
+      <div class="area_component">
+        <!-- Area label -->
+        <div class="area_label">
+          <label for="txt_user">UserName</label>
+        </div>
+  
+        <!-- Area input User -->
+        <div class="area_input">
+          <input
+            type="text"
+            name=""
+            id="txt_user"
+            placeholder="Masukan Username anda"
+            class="txt_component"
+            onpaste="return false"
+            oncopy="return false"
+            oncut="return false"
+          />
+        </div>
+      </div>
     
