main: menambahkan Area Passwoard,dan Area description

--- a/program/Login.html
+++ b/program/Login.html
@@ -109,4 +109,30 @@ background-color: #45a049;
           />
         </div>
       </div>
-    
+    <!-- Area Passwoard -->
+<div class="area_component">
+  <!-- Area label -->
+  <div class="area_label">
+  <label for="txt_Passwoard">Passwoard</label>
+  </div>
+  <!-- Area input -->
+  <div class="area_input">
+  <input
+  type="text"
+  name=""
+  id="txt_Passwoard"
+  placeholder="Isi Passwoard"
+  class="txt_component"
+  />
+  </div>
+  </div>
+  <hr />
+  <!-- Area description -->
+  <div class="area_description">
+  <p>Penjelasan :</p>
+  <p>- Username :Admin hanya dapat mengisikan berupa huruf </p>
+  <p>
+  - Passwoard dapat diisi oleh huruf atau angka
+  </p>
+  </div>
+  
