--- a/program/Login.html
+++ b/program/Login.html
@@ -172,17 +172,14 @@ background-color: #45a049;
            // Tambahkan logika login di sini
            alert("Login button clicked!");
            };
-           // Event "keypress" pada username untuk membatasi input hanya
-           menerima huruf
+           // Event "keypress" pada username untuk membatasi input hanya menerima huruf
            txt_user.addEventListener("keypress", (event) => {
            event.returnValue = keyUsername(event);
-           });// Event "keypress" pada Password untuk membatasi input hanya
-           menerima huruf dan angka
+           });// Event "keypress" pada Password untuk membatasi input hanya menerima huruf dan angka
            txt_Pasword.addEventListener("keypress", (event) => {
            event.returnValue = keyPassword(event);
            });
-           // Event "keyup" pada username untuk berpindah ke password saat
-           menekan Enter
+           // Event "keyup" pada username untuk berpindah ke password saat menekan Enter
            txt_user.addEventListener("keyup", (event) => {
            keyEnter(event, txt_Pasword);
            });
